Replace deprecated newInstance() method